# chaptr

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
LICENSES/: Apache-2.0.txt
benches/: parse.rs
corpus/: README.md  chapters_mihon.json  manga_kavita.json  novel_kavita.json  novel_nyaa.json  smoke_novel.txt
src/: common.rs  lexer.rs  lib.rs  manga.rs  novel.rs
src/tables/: languages.rs  ln_publishers.rs  ln_scanners.rs  mod.rs  scanlator_groups.rs
tools/: extract_kavita.py  extract_mihon.py  scrape_nyaa.py
