[package]
name = "chaptr"
version = "1.0.0"
edition = "2024"
rust-version = "1.95"
description = "Filename tokenizer for manga, manhwa, manhua, and light novels"
license = "GPL-3.0-or-later"
repository = "https://github.com/johnthreekay/chaptr"
readme = "README.md"
keywords = ["manga", "lightnovel", "parser", "tokenizer", "filename"]
categories = ["parser-implementations", "text-processing"]

[dependencies]

[dev-dependencies]
# Used only by the corpus-driven test in src/manga.rs to load
# corpus/manga_kavita.json. Not pulled into release builds.
serde_json = "1"

[lints.rust]
unsafe_code = "forbid"
